APPLE: update core to v1.0.0-rc.14 (#1638)
* Animation update

* Fix notification permission

* Update core to v1.0.0-rc.13

* Update core to v1.0.0-rc.14

* Remove HelperManager from GRPCManager

* Update mnemonic to revocery phrase

* Update daemon management

* Update version to 2024.1.0

* Update iOS error handling

* Downgrade the version to 1.3.1

--- a/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
+++ b/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
@@ -249,7 +249,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Mnemonic"
+            "value" : "Recovery phrase"
           }
         }
       }
@@ -382,6 +382,17 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Connect to"
+          }
+        }
+      }
+    },
+    "daemonError.authorizationDenied" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Authorization denied. Please try again."
           }
         }
       }
@@ -855,6 +866,17 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Installing and authorizing daemon..."
+          }
+        }
+      }
+    },
+    "home.installDaemonButton" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Preparing…"
           }
         }
       }
