--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -191,4 +191,5 @@
 	<string name="dynamic">Dynamic</string>
 	<string name="system_wallpaper">System wallpaper theme</string>
 	<string name="initializing">Initializing</string>
+    <string name="stop">Stop</string>
 </resources>
