--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -192,4 +192,5 @@
 	<string name="system_wallpaper">System wallpaper theme</string>
 	<string name="initializing">Initializing</string>
     <string name="stop">Stop</string>
+	<string name="version">Version</string>
 </resources>
