android: stop on connecting (#1656)
* feat: stop while connecting

* fix: system bar theme color change

* fix: remove sentry toggle

* fix: locale bug

--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -191,4 +191,6 @@
 	<string name="dynamic">Dynamic</string>
 	<string name="system_wallpaper">System wallpaper theme</string>
 	<string name="initializing">Initializing</string>
+    <string name="stop">Stop</string>
+	<string name="version">Version</string>
 </resources>
