--- a/nym-vpn-app/src/i18n/fr/notifications.json
+++ b/nym-vpn-app/src/i18n/fr/notifications.json
@@ -7,5 +7,6 @@
   "logout": {
     "success": "Déconnexion réussie",
     "error": "Une erreur est survenue lors de la déconnexion. Veuillez réessayer."
-  }
+  },
+  "daemon-not-compat": "La version du daemon n'est pas compatible avec l'application ! Version du daemon : {{version}}, version compatible : {{required}}. Veuillez mettre à jour le daemon ou l'application."
 }
