--- a/nym-vpn-app/src/i18n/en/backend-messages.json
+++ b/nym-vpn-app/src/i18n/en/backend-messages.json
@@ -1,6 +1,7 @@
 {
   "connection-progress": {
     "Initializing": "Initializing Nym VPN client…",
-    "InitDone": "Nym VPN client initialized"
+    "InitDone": "Nym VPN client initialized",
+    "Cancelling": "Canceling…"
   }
 }
