--- a/nym-vpn-app/src/i18n/en/backend-messages.json
+++ b/nym-vpn-app/src/i18n/en/backend-messages.json
@@ -2,6 +2,6 @@
   "connection-progress": {
     "Initializing": "Initializing Nym VPN client…",
     "InitDone": "Nym VPN client initialized",
-    "Cancelling": "Canceling…"
+    "Canceling": "Canceling…"
   }
 }
