--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -193,4 +193,5 @@
 	<string name="initializing">Initializing</string>
     <string name="stop">Stop</string>
 	<string name="version">Version</string>
+    <string name="max_devices_reached">Max number of added devices reached.</string>
 </resources>
