--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -194,4 +194,5 @@
     <string name="stop">Stop</string>
 	<string name="version">Version</string>
     <string name="max_devices_reached">Max number of added devices reached.</string>
+    <string name="app_restart_required">App restart required</string>
 </resources>
