add account id and device id info

--- a/nym-vpn-app/src/i18n/en/settings.json
+++ b/nym-vpn-app/src/i18n/en/settings.json
@@ -46,6 +46,8 @@
   "info": {
     "client-version": "Client version",
     "daemon-version": "Daemon version",
-    "network-name": "Network"
+    "network-name": "Network",
+    "account-id": "Account ID",
+    "device-id": "Device ID"
   }
 }
