Add device identifier

--- a/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
+++ b/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
@@ -1321,6 +1321,17 @@
         }
       }
     },
+    "settings.deviceId" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Device ID: "
+          }
+        }
+      }
+    },
     "settings.logIn" : {
       "extractionState" : "manual",
       "localizations" : {
