Update EntryGateway and ExitRouter

--- a/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
+++ b/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
@@ -749,6 +749,28 @@
         }
       }
     },
+    "gateway.random" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Random"
+          }
+        }
+      }
+    },
+    "gateway.randomLowLatency" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Random low latency"
+          }
+        }
+      }
+    },
     "generalNymError.cannotFetchCountries" : {
       "extractionState" : "manual",
       "localizations" : {
