APPLE: add santa menu (#1813)
* Fix typo

* Rename SettingsLink to SettingLink

* Add santas menu

* Update EntryGateway and ExitRouter

* Update santas view to support multiple gateways

* Add update daemon info button

* Extract ConnectionTypes

* Update views

* Update GRPCManager connect to support gateway and router

* Move CountryManagerTypes package to mutual services

* Update connection storage

* Add countryCode migration

* Bump version to v1.6.0

* Fix store CountryStore macOS

* Fix build issues

--- a/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
+++ b/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
@@ -749,6 +749,28 @@
         }
       }
     },
+    "gateway.random" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Random"
+          }
+        }
+      }
+    },
+    "gateway.randomLowLatency" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Random low latency"
+          }
+        }
+      }
+    },
     "generalNymError.cannotFetchCountries" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -909,7 +931,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "join us on Discord"
+            "value" : "Join us on Discord"
           }
         }
       }
